# sypynth

./: .pre-commit-config.yaml  pyproject.toml
.gitignore/: readme.md
src/: sawtooth-oscillator.py  sine-oscillator.py  square-oscillator.py  triangle-oscillator.py
src/oscillators/: sawtooth_oscillator.py  sine_oscillator.py  square_oscillator.py  triangle_oscillator.py
