[tool.poetry]
name = "sypynth"
version = "0.1.0"
description = "A synthesizer made using python"
authors = ["Windsmith <shriramsekar11@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.2"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
